appId: com.jbig.tonkeeper
---
- launchApp:
    clearState: true

- runFlow: "../../steps/import_wallet.yaml"

- tapOn: Collectibles
- assertVisible: "'><img src=x onerror=alert(13)>"
- tapOn:
    id: "ic-sliders-16"
- tapOn:
    id: "ic-minus-16"
    index: 1
- assertNotVisible: "'><img src=x onerror=alert(13)>"
- tapOn: Collectibles
- assertNotVisible: "'><img src=x onerror=alert(13)>"

- launchApp
- runFlow:
    when:
      visible: "Enter passcode"
    file: "../../steps/password/enter_password.yaml"
- tapOn: Collectibles
- assertNotVisible: "'><img src=x onerror=alert(13)>"
- tapOn:
    id: header_action
    optional: true
- tapOn:
    id: "ic-plus-16"