appId: com.jbig.tonkeeper
---
- scrollUntilVisible: 
    element: "Linked with [A-Za-z0-9_-]{4}[.]{3}[A-Za-z0-9_-]{4}"
- tapOn: "Linked with [A-Za-z0-9_-]{4}[.]{3}[A-Za-z0-9_-]{4}"
- assertVisible: Confirm unlink
- tapOn: Confirm
- waitForAnimationToEnd:
    timeout: 5000
- runFlow: ../../password/enter_password.yaml